maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:5: error: not found: value index
  for (i <- index to width  - 1){
            ^JediEscaper:5: error: not found: value width
  for (i <- index to width  - 1){
                     ^JediEscaper:6: error: not found: value height
   for (j <- 0 to height - 1){
                  ^JediEscaper:20: error: not found: value xStart
 var x = xStart
         ^JediEscaper:21: error: not found: value yStart
 var y = yStart
         ^